Fix footer HUD overlapping site buttons/pager

--- a/sites/all/themes/custom/badcamp2016/scss/components/_footer.scss
+++ b/sites/all/themes/custom/badcamp2016/scss/components/_footer.scss
@@ -2,7 +2,6 @@
 #site-footer {
   position:relative;
   .footer-top {
-    margin-bottom:-150px;
     padding-top: 72px;
   }
   .footer-hud-top {
@@ -10,9 +9,8 @@
     background-position: center bottom;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    height:300px;
+    height:150px;
     width:100%;
-    width: 100%;
   }
   .footer-hud-bottom {
     background: linear-gradient(-180deg, rgba(32, 66, 79, 0.8) 0%, rgba(24, 42, 50, 0.8) 100%);
